--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "mlv",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "pre testing",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "mlv",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "handlebars": "^4.0.12",
-    "hbs": "^4.0.1",
     "mongoose": "^5.4.9"
   }
 }
